sint e lex/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    MAIN

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier ID SEMICOLON
Rule 7     var_declaration -> type_specifier ID ASSIGN expression SEMICOLON
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> FLOAT
Rule 10    type_specifier -> CHAR
Rule 11    type_specifier -> BOOLEAN
Rule 12    type_specifier -> VOID
Rule 13    fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt
Rule 14    params -> param_list
Rule 15    params -> VOID
Rule 16    param_list -> param_list COMMA param
Rule 17    param_list -> param
Rule 18    param -> type_specifier ID
Rule 19    compound_stmt -> LBRACE local_declarations statement_list RBRACE
Rule 20    local_declarations -> local_declarations var_declaration
Rule 21    local_declarations -> empty
Rule 22    statement_list -> statement_list statement
Rule 23    statement_list -> empty
Rule 24    statement -> expression_stmt
Rule 25    statement -> compound_stmt
Rule 26    statement -> selection_stmt
Rule 27    statement -> iteration_stmt
Rule 28    statement -> return_stmt
Rule 29    statement -> print_stmt
Rule 30    expression_stmt -> expression SEMICOLON
Rule 31    expression_stmt -> SEMICOLON
Rule 32    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 33    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 34    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 35    iteration_stmt -> FOR LPAREN expression_stmt expression_stmt expression RPAREN statement
Rule 36    return_stmt -> RETURN SEMICOLON
Rule 37    return_stmt -> RETURN expression SEMICOLON
Rule 38    print_stmt -> PRINTF LPAREN STRING RPAREN SEMICOLON
Rule 39    print_stmt -> PRINTF LPAREN expression RPAREN SEMICOLON
Rule 40    expression -> var ASSIGN expression
Rule 41    expression -> simple_expression
Rule 42    var -> ID
Rule 43    var -> ID LBRACKET expression RBRACKET
Rule 44    simple_expression -> additive_expression relop additive_expression
Rule 45    simple_expression -> additive_expression
Rule 46    relop -> LE
Rule 47    relop -> LT
Rule 48    relop -> GE
Rule 49    relop -> GT
Rule 50    relop -> EQ
Rule 51    relop -> NE
Rule 52    additive_expression -> additive_expression addop term
Rule 53    additive_expression -> term
Rule 54    addop -> PLUS
Rule 55    addop -> MINUS
Rule 56    term -> term mulop factor
Rule 57    term -> factor
Rule 58    mulop -> TIMES
Rule 59    mulop -> DIVIDE
Rule 60    mulop -> MOD
Rule 61    factor -> LPAREN expression RPAREN
Rule 62    factor -> var
Rule 63    factor -> call
Rule 64    factor -> NUMBER
Rule 65    factor -> FLOAT
Rule 66    factor -> CHAR
Rule 67    factor -> STRING
Rule 68    call -> ID LPAREN args RPAREN
Rule 69    args -> arg_list
Rule 70    args -> empty
Rule 71    arg_list -> arg_list COMMA expression
Rule 72    arg_list -> expression
Rule 73    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 7 40
BOOLEAN              : 11
CHAR                 : 10 66
COMMA                : 16 71
DIVIDE               : 59
ELSE                 : 32
EQ                   : 50
FLOAT                : 9 65
FOR                  : 35
GE                   : 48
GT                   : 49
ID                   : 6 7 13 18 42 43 68
IF                   : 32 33
INT                  : 8
LBRACE               : 19
LBRACKET             : 43
LE                   : 46
LPAREN               : 13 32 33 34 35 38 39 61 68
LT                   : 47
MAIN                 : 
MINUS                : 55
MOD                  : 60
NE                   : 51
NUMBER               : 64
PLUS                 : 54
PRINTF               : 38 39
RBRACE               : 19
RBRACKET             : 43
RETURN               : 36 37
RPAREN               : 13 32 33 34 35 38 39 61 68
SEMICOLON            : 6 7 30 31 36 37 38 39
STRING               : 38 67
TIMES                : 58
VOID                 : 12 15
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

additive_expression  : 44 44 45 52
addop                : 52
arg_list             : 69 71
args                 : 68
call                 : 63
compound_stmt        : 13 25
declaration          : 2 3
declaration_list     : 1 2
empty                : 21 23 70
expression           : 7 30 32 33 34 35 37 39 40 43 61 71 72
expression_stmt      : 24 35 35
factor               : 56 57
fun_declaration      : 5
iteration_stmt       : 27
local_declarations   : 19 20
mulop                : 56
param                : 16 17
param_list           : 14 16
params               : 13
print_stmt           : 29
program              : 0
relop                : 44
return_stmt          : 28
selection_stmt       : 26
simple_expression    : 41
statement            : 22 32 32 33 34 35
statement_list       : 19 22
term                 : 52 53 56
type_specifier       : 6 7 13 18
var                  : 40 62
var_declaration      : 4 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID ASSIGN expression SEMICOLON
    (13) fun_declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . BOOLEAN
    (12) type_specifier -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    BOOLEAN         shift and go to state 10
    VOID            shift and go to state 11

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID ASSIGN expression SEMICOLON
    (13) fun_declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . BOOLEAN
    (12) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    BOOLEAN         shift and go to state 10
    VOID            shift and go to state 11

    declaration                    shift and go to state 12
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    BOOLEAN         reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    BOOLEAN         reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> fun_declaration .

    INT             reduce using rule 5 (declaration -> fun_declaration .)
    FLOAT           reduce using rule 5 (declaration -> fun_declaration .)
    CHAR            reduce using rule 5 (declaration -> fun_declaration .)
    BOOLEAN         reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 6

    (6) var_declaration -> type_specifier . ID SEMICOLON
    (7) var_declaration -> type_specifier . ID ASSIGN expression SEMICOLON
    (13) fun_declaration -> type_specifier . ID LPAREN params RPAREN compound_stmt

    ID              shift and go to state 13


state 7

    (8) type_specifier -> INT .

    ID              reduce using rule 8 (type_specifier -> INT .)


state 8

    (9) type_specifier -> FLOAT .

    ID              reduce using rule 9 (type_specifier -> FLOAT .)


state 9

    (10) type_specifier -> CHAR .

    ID              reduce using rule 10 (type_specifier -> CHAR .)


state 10

    (11) type_specifier -> BOOLEAN .

    ID              reduce using rule 11 (type_specifier -> BOOLEAN .)


state 11

    (12) type_specifier -> VOID .

    ID              reduce using rule 12 (type_specifier -> VOID .)


state 12

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    BOOLEAN         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 13

    (6) var_declaration -> type_specifier ID . SEMICOLON
    (7) var_declaration -> type_specifier ID . ASSIGN expression SEMICOLON
    (13) fun_declaration -> type_specifier ID . LPAREN params RPAREN compound_stmt

    SEMICOLON       shift and go to state 14
    ASSIGN          shift and go to state 15
    LPAREN          shift and go to state 16


state 14

    (6) var_declaration -> type_specifier ID SEMICOLON .

    INT             reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    FLOAT           reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    CHAR            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    BOOLEAN         reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    VOID            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    $end            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    RBRACE          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    LBRACE          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    IF              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    FOR             reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    RETURN          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    PRINTF          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    LPAREN          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    NUMBER          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    STRING          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)


state 15

    (7) var_declaration -> type_specifier ID ASSIGN . expression SEMICOLON
    (40) expression -> . var ASSIGN expression
    (41) expression -> . simple_expression
    (42) var -> . ID
    (43) var -> . ID LBRACKET expression RBRACKET
    (44) simple_expression -> . additive_expression relop additive_expression
    (45) simple_expression -> . additive_expression
    (52) additive_expression -> . additive_expression addop term
    (53) additive_expression -> . term
    (56) term -> . term mulop factor
    (57) term -> . factor
    (61) factor -> . LPAREN expression RPAREN
    (62) factor -> . var
    (63) factor -> . call
    (64) factor -> . NUMBER
    (65) factor -> . FLOAT
    (66) factor -> . CHAR
    (67) factor -> . STRING
    (68) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 17
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    STRING          shift and go to state 29

    expression                     shift and go to state 18
    var                            shift and go to state 19
    simple_expression              shift and go to state 20
    additive_expression            shift and go to state 21
    term                           shift and go to state 22
    factor                         shift and go to state 23
    call                           shift and go to state 25

state 16

    (13) fun_declaration -> type_specifier ID LPAREN . params RPAREN compound_stmt
    (14) params -> . param_list
    (15) params -> . VOID
    (16) param_list -> . param_list COMMA param
    (17) param_list -> . param
    (18) param -> . type_specifier ID
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . BOOLEAN
    (12) type_specifier -> . VOID

    VOID            shift and go to state 33
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    BOOLEAN         shift and go to state 10

    type_specifier                 shift and go to state 30
    params                         shift and go to state 31
    param_list                     shift and go to state 32
    param                          shift and go to state 34

state 17

    (42) var -> ID .
    (43) var -> ID . LBRACKET expression RBRACKET
    (68) call -> ID . LPAREN args RPAREN

    ASSIGN          reduce using rule 42 (var -> ID .)
    TIMES           reduce using rule 42 (var -> ID .)
    DIVIDE          reduce using rule 42 (var -> ID .)
    MOD             reduce using rule 42 (var -> ID .)
    LE              reduce using rule 42 (var -> ID .)
    LT              reduce using rule 42 (var -> ID .)
    GE              reduce using rule 42 (var -> ID .)
    GT              reduce using rule 42 (var -> ID .)
    EQ              reduce using rule 42 (var -> ID .)
    NE              reduce using rule 42 (var -> ID .)
    PLUS            reduce using rule 42 (var -> ID .)
    MINUS           reduce using rule 42 (var -> ID .)
    SEMICOLON       reduce using rule 42 (var -> ID .)
    RPAREN          reduce using rule 42 (var -> ID .)
    RBRACKET        reduce using rule 42 (var -> ID .)
    COMMA           reduce using rule 42 (var -> ID .)
    LBRACKET        shift and go to state 35
    LPAREN          shift and go to state 36


state 18

    (7) var_declaration -> type_specifier ID ASSIGN expression . SEMICOLON

    SEMICOLON       shift and go to state 37


state 19

    (40) expression -> var . ASSIGN expression
    (62) factor -> var .

    ASSIGN          shift and go to state 38
    TIMES           reduce using rule 62 (factor -> var .)
    DIVIDE          reduce using rule 62 (factor -> var .)
    MOD             reduce using rule 62 (factor -> var .)
    LE              reduce using rule 62 (factor -> var .)
    LT              reduce using rule 62 (factor -> var .)
    GE              reduce using rule 62 (factor -> var .)
    GT              reduce using rule 62 (factor -> var .)
    EQ              reduce using rule 62 (factor -> var .)
    NE              reduce using rule 62 (factor -> var .)
    PLUS            reduce using rule 62 (factor -> var .)
    MINUS           reduce using rule 62 (factor -> var .)
    SEMICOLON       reduce using rule 62 (factor -> var .)
    RPAREN          reduce using rule 62 (factor -> var .)
    RBRACKET        reduce using rule 62 (factor -> var .)
    COMMA           reduce using rule 62 (factor -> var .)


state 20

    (41) expression -> simple_expression .

    SEMICOLON       reduce using rule 41 (expression -> simple_expression .)
    RPAREN          reduce using rule 41 (expression -> simple_expression .)
    RBRACKET        reduce using rule 41 (expression -> simple_expression .)
    COMMA           reduce using rule 41 (expression -> simple_expression .)


state 21

    (44) simple_expression -> additive_expression . relop additive_expression
    (45) simple_expression -> additive_expression .
    (52) additive_expression -> additive_expression . addop term
    (46) relop -> . LE
    (47) relop -> . LT
    (48) relop -> . GE
    (49) relop -> . GT
    (50) relop -> . EQ
    (51) relop -> . NE
    (54) addop -> . PLUS
    (55) addop -> . MINUS

    SEMICOLON       reduce using rule 45 (simple_expression -> additive_expression .)
    RPAREN          reduce using rule 45 (simple_expression -> additive_expression .)
    RBRACKET        reduce using rule 45 (simple_expression -> additive_expression .)
    COMMA           reduce using rule 45 (simple_expression -> additive_expression .)
    LE              shift and go to state 41
    LT              shift and go to state 42
    GE              shift and go to state 43
    GT              shift and go to state 44
    EQ              shift and go to state 45
    NE              shift and go to state 46
    PLUS            shift and go to state 47
    MINUS           shift and go to state 48

    relop                          shift and go to state 39
    addop                          shift and go to state 40

state 22

    (53) additive_expression -> term .
    (56) term -> term . mulop factor
    (58) mulop -> . TIMES
    (59) mulop -> . DIVIDE
    (60) mulop -> . MOD

    LE              reduce using rule 53 (additive_expression -> term .)
    LT              reduce using rule 53 (additive_expression -> term .)
    GE              reduce using rule 53 (additive_expression -> term .)
    GT              reduce using rule 53 (additive_expression -> term .)
    EQ              reduce using rule 53 (additive_expression -> term .)
    NE              reduce using rule 53 (additive_expression -> term .)
    PLUS            reduce using rule 53 (additive_expression -> term .)
    MINUS           reduce using rule 53 (additive_expression -> term .)
    SEMICOLON       reduce using rule 53 (additive_expression -> term .)
    RPAREN          reduce using rule 53 (additive_expression -> term .)
    RBRACKET        reduce using rule 53 (additive_expression -> term .)
    COMMA           reduce using rule 53 (additive_expression -> term .)
    TIMES           shift and go to state 50
    DIVIDE          shift and go to state 51
    MOD             shift and go to state 52

    mulop                          shift and go to state 49

state 23

    (57) term -> factor .

    TIMES           reduce using rule 57 (term -> factor .)
    DIVIDE          reduce using rule 57 (term -> factor .)
    MOD             reduce using rule 57 (term -> factor .)
    LE              reduce using rule 57 (term -> factor .)
    LT              reduce using rule 57 (term -> factor .)
    GE              reduce using rule 57 (term -> factor .)
    GT              reduce using rule 57 (term -> factor .)
    EQ              reduce using rule 57 (term -> factor .)
    NE              reduce using rule 57 (term -> factor .)
    PLUS            reduce using rule 57 (term -> factor .)
    MINUS           reduce using rule 57 (term -> factor .)
    SEMICOLON       reduce using rule 57 (term -> factor .)
    RPAREN          reduce using rule 57 (term -> factor .)
    RBRACKET        reduce using rule 57 (term -> factor .)
    COMMA           reduce using rule 57 (term -> factor .)


state 24

    (61) factor -> LPAREN . expression RPAREN
    (40) expression -> . var ASSIGN expression
    (41) expression -> . simple_expression
    (42) var -> . ID
    (43) var -> . ID LBRACKET expression RBRACKET
    (44) simple_expression -> . additive_expression relop additive_expression
    (45) simple_expression -> . additive_expression
    (52) additive_expression -> . additive_expression addop term
    (53) additive_expression -> . term
    (56) term -> . term mulop factor
    (57) term -> . factor
    (61) factor -> . LPAREN expression RPAREN
    (62) factor -> . var
    (63) factor -> . call
    (64) factor -> . NUMBER
    (65) factor -> . FLOAT
    (66) factor -> . CHAR
    (67) factor -> . STRING
    (68) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 17
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    STRING          shift and go to state 29

    expression                     shift and go to state 53
    var                            shift and go to state 19
    simple_expression              shift and go to state 20
    additive_expression            shift and go to state 21
    term                           shift and go to state 22
    factor                         shift and go to state 23
    call                           shift and go to state 25

state 25

    (63) factor -> call .

    TIMES           reduce using rule 63 (factor -> call .)
    DIVIDE          reduce using rule 63 (factor -> call .)
    MOD             reduce using rule 63 (factor -> call .)
    LE              reduce using rule 63 (factor -> call .)
    LT              reduce using rule 63 (factor -> call .)
    GE              reduce using rule 63 (factor -> call .)
    GT              reduce using rule 63 (factor -> call .)
    EQ              reduce using rule 63 (factor -> call .)
    NE              reduce using rule 63 (factor -> call .)
    PLUS            reduce using rule 63 (factor -> call .)
    MINUS           reduce using rule 63 (factor -> call .)
    SEMICOLON       reduce using rule 63 (factor -> call .)
    RPAREN          reduce using rule 63 (factor -> call .)
    RBRACKET        reduce using rule 63 (factor -> call .)
    COMMA           reduce using rule 63 (factor -> call .)


state 26

    (64) factor -> NUMBER .

    TIMES           reduce using rule 64 (factor -> NUMBER .)
    DIVIDE          reduce using rule 64 (factor -> NUMBER .)
    MOD             reduce using rule 64 (factor -> NUMBER .)
    LE              reduce using rule 64 (factor -> NUMBER .)
    LT              reduce using rule 64 (factor -> NUMBER .)
    GE              reduce using rule 64 (factor -> NUMBER .)
    GT              reduce using rule 64 (factor -> NUMBER .)
    EQ              reduce using rule 64 (factor -> NUMBER .)
    NE              reduce using rule 64 (factor -> NUMBER .)
    PLUS            reduce using rule 64 (factor -> NUMBER .)
    MINUS           reduce using rule 64 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 64 (factor -> NUMBER .)
    RPAREN          reduce using rule 64 (factor -> NUMBER .)
    RBRACKET        reduce using rule 64 (factor -> NUMBER .)
    COMMA           reduce using rule 64 (factor -> NUMBER .)


state 27

    (65) factor -> FLOAT .

    TIMES           reduce using rule 65 (factor -> FLOAT .)
    DIVIDE          reduce using rule 65 (factor -> FLOAT .)
    MOD             reduce using rule 65 (factor -> FLOAT .)
    LE              reduce using rule 65 (factor -> FLOAT .)
    LT              reduce using rule 65 (factor -> FLOAT .)
    GE              reduce using rule 65 (factor -> FLOAT .)
    GT              reduce using rule 65 (factor -> FLOAT .)
    EQ              reduce using rule 65 (factor -> FLOAT .)
    NE              reduce using rule 65 (factor -> FLOAT .)
    PLUS            reduce using rule 65 (factor -> FLOAT .)
    MINUS           reduce using rule 65 (factor -> FLOAT .)
    SEMICOLON       reduce using rule 65 (factor -> FLOAT .)
    RPAREN          reduce using rule 65 (factor -> FLOAT .)
    RBRACKET        reduce using rule 65 (factor -> FLOAT .)
    COMMA           reduce using rule 65 (factor -> FLOAT .)


state 28

    (66) factor -> CHAR .

    TIMES           reduce using rule 66 (factor -> CHAR .)
    DIVIDE          reduce using rule 66 (factor -> CHAR .)
    MOD             reduce using rule 66 (factor -> CHAR .)
    LE              reduce using rule 66 (factor -> CHAR .)
    LT              reduce using rule 66 (factor -> CHAR .)
    GE              reduce using rule 66 (factor -> CHAR .)
    GT              reduce using rule 66 (factor -> CHAR .)
    EQ              reduce using rule 66 (factor -> CHAR .)
    NE              reduce using rule 66 (factor -> CHAR .)
    PLUS            reduce using rule 66 (factor -> CHAR .)
    MINUS           reduce using rule 66 (factor -> CHAR .)
    SEMICOLON       reduce using rule 66 (factor -> CHAR .)
    RPAREN          reduce using rule 66 (factor -> CHAR .)
    RBRACKET        reduce using rule 66 (factor -> CHAR .)
    COMMA           reduce using rule 66 (factor -> CHAR .)


state 29

    (67) factor -> STRING .

    TIMES           reduce using rule 67 (factor -> STRING .)
    DIVIDE          reduce using rule 67 (factor -> STRING .)
    MOD             reduce using rule 67 (factor -> STRING .)
    LE              reduce using rule 67 (factor -> STRING .)
    LT              reduce using rule 67 (factor -> STRING .)
    GE              reduce using rule 67 (factor -> STRING .)
    GT              reduce using rule 67 (factor -> STRING .)
    EQ              reduce using rule 67 (factor -> STRING .)
    NE              reduce using rule 67 (factor -> STRING .)
    PLUS            reduce using rule 67 (factor -> STRING .)
    MINUS           reduce using rule 67 (factor -> STRING .)
    SEMICOLON       reduce using rule 67 (factor -> STRING .)
    RPAREN          reduce using rule 67 (factor -> STRING .)
    RBRACKET        reduce using rule 67 (factor -> STRING .)
    COMMA           reduce using rule 67 (factor -> STRING .)


state 30

    (18) param -> type_specifier . ID

    ID              shift and go to state 54


state 31

    (13) fun_declaration -> type_specifier ID LPAREN params . RPAREN compound_stmt

    RPAREN          shift and go to state 55


state 32

    (14) params -> param_list .
    (16) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 14 (params -> param_list .)
    COMMA           shift and go to state 56


state 33

    (15) params -> VOID .
    (12) type_specifier -> VOID .

    RPAREN          reduce using rule 15 (params -> VOID .)
    ID              reduce using rule 12 (type_specifier -> VOID .)


state 34

    (17) param_list -> param .

    COMMA           reduce using rule 17 (param_list -> param .)
    RPAREN          reduce using rule 17 (param_list -> param .)


state 35

    (43) var -> ID LBRACKET . expression RBRACKET
    (40) expression -> . var ASSIGN expression
    (41) expression -> . simple_expression
    (42) var -> . ID
    (43) var -> . ID LBRACKET expression RBRACKET
    (44) simple_expression -> . additive_expression relop additive_expression
    (45) simple_expression -> . additive_expression
    (52) additive_expression -> . additive_expression addop term
    (53) additive_expression -> . term
    (56) term -> . term mulop factor
    (57) term -> . factor
    (61) factor -> . LPAREN expression RPAREN
    (62) factor -> . var
    (63) factor -> . call
    (64) factor -> . NUMBER
    (65) factor -> . FLOAT
    (66) factor -> . CHAR
    (67) factor -> . STRING
    (68) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 17
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    STRING          shift and go to state 29

    expression                     shift and go to state 57
    var                            shift and go to state 19
    simple_expression              shift and go to state 20
    additive_expression            shift and go to state 21
    term                           shift and go to state 22
    factor                         shift and go to state 23
    call                           shift and go to state 25

state 36

    (68) call -> ID LPAREN . args RPAREN
    (69) args -> . arg_list
    (70) args -> . empty
    (71) arg_list -> . arg_list COMMA expression
    (72) arg_list -> . expression
    (73) empty -> .
    (40) expression -> . var ASSIGN expression
    (41) expression -> . simple_expression
    (42) var -> . ID
    (43) var -> . ID LBRACKET expression RBRACKET
    (44) simple_expression -> . additive_expression relop additive_expression
    (45) simple_expression -> . additive_expression
    (52) additive_expression -> . additive_expression addop term
    (53) additive_expression -> . term
    (56) term -> . term mulop factor
    (57) term -> . factor
    (61) factor -> . LPAREN expression RPAREN
    (62) factor -> . var
    (63) factor -> . call
    (64) factor -> . NUMBER
    (65) factor -> . FLOAT
    (66) factor -> . CHAR
    (67) factor -> . STRING
    (68) call -> . ID LPAREN args RPAREN

    RPAREN          reduce using rule 73 (empty -> .)
    ID              shift and go to state 17
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28
    STRING          shift and go to state 29

    args                           shift and go to state 58
    arg_list                       shift and go to state 59
    empty                          shift and go to state 60
    expression                     shift and go to state 61
    var                            shift and go to state 19
    simple_expression              shift and go to state 20
    additive_expression            shift and go to state 21
    term                           shift and go to state 22
    factor                         shift and go to state 23
    call                           shift and go to state 25

state 37

    (7) var_declaration -> type_specifier ID ASSIGN expression SEMICOLON .
